- don't crash install when mounting CD fails (#33421)

Version 10.4.211 - 24 September 2007, by Pascal "Pixel" Rigaux

- on upgrade, don't add resume=xxx if noresume is there (#33953)
- diskdrake
  o fix "Add to LVM"
- do not display any message when user screenshot when chrooted during install
  of pkgs (#33752)
- don't add resume=xxx to bootloader configuration if there is noresume (#33953)
- ignore /proc/partitions when "solaris" extended partition is present (#33866)
- translate the pkg summary when mdv-rpm-summary info is available
  (for the "Details" mode when installing packages)
- ensure mdv-rpm-summary is installed first (if selected)

Version 10.4.207 - 21 September 2007, by Thierry Vignaud

- localization:
  o default input method is now scim-bridge (#32138)

Version 10.4.206 - 20 September 2007, by Thierry Vignaud

- fix some banner icons (#33802)

Version 10.4.205 - 20 September 2007, by Olivier "blino" Blin

- stop configuring TV cards in summary since kernel do a better job now
- fix passing module options when module name contains a '-' character
- add dkms-modules.alias and ldetect-lst-modules.alias files in stage2

Version 10.4.204 - 19 September 2007, by Pascal "Pixel" Rigaux

- individual package selection: make the package "Info" non editable
- diskdrake:
  o "Clear All" defaults to LVM on full disk if drive is >4TB
  o do not allow partitions bigger than 2TB-1 on DOS MBR, nor partitions
    starting above 2TB-1
- restore banner on pop up messages (#33753)
- handle /boot/xxx files on linux raid1
- when basesystem can't be selected, display the reason
- also load dm-zero for dmraid
- add RC2 banner

Version 10.4.201 - 17 September 2007, by Pascal "Pixel" Rigaux

- fix loading dependencies of kernel module "xxx-yyy" (instead of "xxx_yyy")
  (eg: dm-mirror)
- report_bug: hide grub password (#33634)
- fix blocking wait_message (when they pop) (#33676, #33670)
- advertising: restore support for $title in .pl files (wrongly dropped in 10.4.195)