@@ -1,4 +1,6 @@
 - don't crash install when mounting CD fails (#33421)
+- don't ask for desktop and go directly to choose groups if kde and gnome are
+  not available on media (useful for mini iso)
 
 Version 10.4.211 - 24 September 2007, by Pascal "Pixel" Rigaux
 
